# ply

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  dist-workspace.toml
.github/workflows/: aur.yml  ci.yml  homebrew.yml  native-package-smoke.yml  native-packages.yml  release.yml
docs/: install.md
docs/guides/: consume-packages-project.md  create-package.md  global-layer.md  manage-managed-assets.md
docs/reference/: cli.md  configuration-and-layering.md  package-format.md  troubleshooting.md
packaging/aur/ply-bin/: .SRCINFO  LICENSE  PKGBUILD  README.md
packaging/aur/ply-bin/testdata/: sha256.sum
scripts/: check-aur-packaging.sh  check-shell-installer-safety.sh  generate-aur-ply-bin.sh  package-linux-native-artifacts.sh  verify-native-linux-packages.sh  verify-release-artifacts.sh
src/: adapters.rs  config.rs  git.rs  lib.rs  main.rs  ops.rs  prompt_resources.rs  ui.rs
