[package]
name = "ply"
version = "0.1.0-rc3"
edition = "2024"
rust-version = "1.94"
description = "Local-first package manager for coding-agent assets."
license = "GPL-3.0-only"
repository = "https://github.com/jeansimeoni/ply"
homepage = "https://plycli.dev"
keywords = ["ai", "agents", "codex", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"
